# docs/swagger.yaml
@@ -29,7 +29,7 @@ definitions:
     type: object
   models.User:
     properties:
-      passsword:
+      password:
         type: string
       username:
         type: string
@@ -210,6 +210,73 @@ paths:
           schema:
             type: string
       summary: List recipes by tag
+      tags:
+      - recipes
+  /signin:
+    post:
+      consumes:
+      - application/json
+      description: Refresh JWT Token
+      parameters:
+      - description: jwt token
+        in: header
+        name: Authorization
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.JWTOutput'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Refresh JWT Token
+      tags:
+      - recipes
+  /signout:
+    post:
+      consumes:
+      - application/json
+      description: Sign Out user by removing cookies
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Sign Out user
       tags:
       - recipes
   /singin:
