# main.go
@@ -5,6 +5,8 @@ import (
 	"log"
 	"os"
 
+	"github.com/gin-contrib/sessions"
+	redisStore "github.com/gin-contrib/sessions/redis"
 	"github.com/gin-gonic/gin"
 	"github.com/go-redis/redis"
 	"github.com/khhini/go-distributed-web-app/docs"
@@ -63,16 +65,17 @@ func init() {
 func main() {
 
 	router := gin.Default()
-	// store, _ := redisStore.NewStore(10, "tcp", "localhost:6379", "", []byte(os.Getenv("JWT_SECRET")))
-	// router.Use(sessions.Sessions("recipes_api", store))
+	store, _ := redisStore.NewStore(10, "tcp", "localhost:6379", "", []byte(os.Getenv("JWT_SECRET")))
+	router.Use(sessions.Sessions("recipes_api", store))
 
 	router.GET("/recipes", recipesHandler.ListRecipesHandler)
 	router.GET("/recipes/search", recipesHandler.SearchRecipesHandler)
-	router.POST("/signin", authHandler.SignInHandler)
+	router.POST("/signin", authHandler.SignInSessionHandler)
+	router.POST("/signout", authHandler.SignOutHandler)
 	router.POST("/refresh", authHandler.RefreshHandler)
 
 	authorized := router.Group("/")
-	authorized.Use(authHandler.AuthMiddleware())
+	authorized.Use(authHandler.AuthSessionMiddleware())
 	{
 		authorized.POST("/recipes", recipesHandler.NewRecipeHandler)
 		authorized.PUT("/recipes/:id", recipesHandler.UpdateRecipeHandler)
